[tool.poetry]
name = "shed"
version = "0.1.0"
description = ""
authors = ["lee <lee.m.everett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
rlcard = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
