[package]
name = "rust_shed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_shed"
crate-type = ["cdylib"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
rand = "0.8.4"
lazy_static = "1.4.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
#pyo3 = "0.19.0"
